# endaq-python

./: $GITHUB_OUTPUT  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  drs_scratch.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py
.github/workflows/: docs-tests.yml  publish-to-pypi.yml  unit-tests.yml
docs/: api_ref.rst  conf.py  example_notebooks.rst  index.rst  requirements.txt  spelling_wordlist.txt
docs/_static/: endaq-style.css
docs/endaq/: batch.rst  calc.rst  calc_usage.rst  cloud.rst  cloud_API_wrapper.rst  ide.rst  ide_measurement.rst  ide_usage.rst  plot.rst  plot_usage.rst
docs/webinars/: Webinar_Intro_Python_Acceleration_CSV_Analysis.ipynb  Webinar_Introduction_NumPy_and_Pandas.ipynb  Webinar_Introduction_enDAQ_Library.ipynb  enDAQ_Python_Quick_Start.ipynb
endaq/: __init__.py  _version.py
endaq/batch/: README.rst  __init__.py  analyzer.py  calc.py  core.py  quat.py
endaq/calc/: README.md  __init__.py  fft.py  filters.py  integrate.py  psd.py  rotation.py  shock.py  stats.py  utils.py  vibration.py
endaq/cloud/: API_wrapper.py  README.md  __init__.py  core.py  scripting.py
endaq/ide/: README.md  __init__.py  endaq.ide examples.ipynb  files.py  gdrive.py  info.py  measurement.py  nmea.py  requirements.txt  util.py
endaq/plot/: README.md  __init__.py  plots.py  (+3 more)
example_scripts/: ActTest_009.IDE  Untitled2.ipynb  endaq_overview.ipynb  test.IDE
src/: pvss.c  pvss.h
tests/: conftest.py  pvss_test.cc  test_ide.py
(+40 files in other folders)
